# universal-tool-server-fork

./: README.md  fixed_render_server.py  modal_mcp.py  modal_simple.py  package-lock.json  package.json  render.yaml  render_server.py  requirements.txt  standalone_server.py  streamable_http_server.py  streamable_test_server.py  test_mcp_client.py  test_mcp_client_local.py  test_streamable_client.js  test_streamable_client.py
.github/workflows/: ci.yml  release.yml
examples/: Makefile  pyproject.toml
examples/auth/: async_client.py  server.py
examples/mcp/: client.py  server.py
examples/react-agent/: agent.py  server.py
examples/simple/: async_client.py  server.py
libs/mcp-bridge/: Makefile  README.md  pyproject.toml
libs/mcp-bridge/mcp_bridge/: __init__.py
libs/o2mcp/: README.md  pyproject.toml
libs/o2mcp/o2mcp/: __init__.py
libs/sdk-py/: Makefile  README.md  pyproject.toml
libs/sdk-py/open_tool_client/: __init__.py
libs/sdk-py/tests/unit_tests/: test_sdk.py
libs/sdk-py/universal_tool_client/: __init__.py
libs/server/: Makefile  pyproject.toml  run_integration.sh
libs/server/open_tool_server/: __init__.py  mcp.py  root.py  tools.py
libs/server/open_tool_server/auth/: __init__.py  middleware.py  types.py
libs/server/tests/integration/: mcp_server.py  test_client.py
libs/server/tests/unit_tests/: test_tools.py  test_with_sdk.py  test_with_sync_sdk.py  test_without_sdk.py  utils.py
libs/server/tests/unit_tests/api/: test_with_sdk.py
libs/server/universal_tool_server/: __init__.py  mcp.py  root.py  splash.py  tools.py
libs/server/universal_tool_server/auth/: __init__.py  exceptions.py  middleware.py  types.py
