[project]
name = "examples"
version = "0.1.0"
description = "Env for running examples."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3.9",
    "langgraph>=0.3.5",
    "langgraph-prebuilt>=0.1.2",
    "open-tool-client",
    "universal-tool-server",
]

[tool.uv.sources]
universal-tool-server = { path = "../libs/server" }
open-tool-client = { path = "../libs/sdk-py" }

[dependency-groups]
test = [
    "ruff>=0.9.9",
]
