[project]
name = "open-tool-server"
version = "0.0.2"
description = "Open Tool Server (Python)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "jsonschema-rs>=0.20.1",
    "langchain-core>=0.2.0",
    "mcp>=1.3.0",
    "orjson>=3.10.15",
    "pydantic>=2.7.2",
]

[dependency-groups]
test = [
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "open-tool-client",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.9.7",
]

[project.urls]
repository = "https://github.com/langchain-ai/open-tool-server"


[tool.pytest.ini_options]
minversion = "8.0"
# -ra: Report all extra test outcomes (passed, skipped, failed, etc.)
# -q: Enable quiet mode for less cluttered output
# -v: Enable verbose output to display detailed test names and statuses
# --durations=5: Show the 10 slowest tests after the run (useful for performance tuning)
addopts = "-ra -q -v --durations=5"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
  "E501" # line-length
]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.uv.sources]
open-tool-client = { path = "../sdk-py" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

